--- a/index.html
+++ b/index.html
@@ -1,60 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
     <!-- Google Font CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font Awesome ofr ICON CDN -->
-    <script src="https://kit.fontawesome.com/ef7151771d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ef7151771d.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- TailWind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
-</head>
-<body>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
+  </head>
+  <body>
     <!-- Main Content -->
-     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-        <!-- Header section -->
-         <header class="flex pt-10 mb-20">
-            <!-- Text Content -->
-             <div>
-                <h1 class="text-5xl md:text-7xl">It's good <br>tea time at The<br>Tea House</h1>
-                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
-             </div>
-             <!-- Image Content -->
-              <div class="relative">
-                <!-- Image -->
-                <div>
-                    <img src="images/banner.png" alt="">
-                </div>
-                <!-- Card -->
-                 <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
-                    <!-- Icon -->
-                    <div>
-                        <i class="fa-solid fa-star text-2xl text-amber-400"></i>
-                    </div>
-                    <!-- Text -->
-                     <div class="ml-2">
-                        <h2 class="lg:text-2xl font-bold">5.00</h2>
-                        <p class="text-gray-500">Trust Pilot Ratings</p>
-                     </div>
-                 </div>
-              </div>
-         </header>
-     </main>
-</body>
+    <main class="max-w-screen-xl px-16 mx-auto lg:px-28">
+      <!-- Header section -->
+      <header class="pt-10 mb-20 lg:flex">
+        <!-- Text Content -->
+        <div>
+          <h1 class="text-5xl md:text-7xl">
+            It's good <br />tea time at The<br />Tea House
+          </h1>
+          <p class="w-3/4 text-gray-500">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <button
+            class="px-5 py-3 font-bold text-white rounded-lg bg-gradient-to-r from-orange-500 to-red-500"
+          >
+            Explore More
+            <i class="text-xl -rotate-45 fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <!-- Image Content -->
+        <div class="relative">
+          <!-- Image -->
+          <div>
+            <img src="images/banner.png" alt="" />
+          </div>
+          <!-- Card -->
+          <div
+            class="absolute flex items-center px-2 py-2 bg-white rounded-lg shadow-lg md:px-10 lg:py-4 top-28 md:top-80 md:left-32 lg:left-28"
+          >
+            <!-- Icon -->
+            <div>
+              <i class="text-2xl fa-solid fa-star text-amber-400"></i>
+            </div>
+            <!-- Text -->
+            <div class="ml-2">
+              <h2 class="font-bold lg:text-2xl">5.00</h2>
+              <p class="text-gray-500">Trust Pilot Ratings</p>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- Feature Product Section -->
+      <section class="py-8 lg:py-24">
+        <!-- Title -->
+        <div class="mb-8 text-center">
+          <h1 class="mb-4 text-3xl font-bold md:text-4xl">
+            Our Featured Products
+          </h1>
+          <p class="max-w-3xl mx-auto text-gray-600">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- grid Card -->
+        <div class="grid grid-cols-1 gap-6 text-center md:grid-cols-2 lg:grid-cols-4">
+          <!-- Card -->
+          <div class="overflow-hidden bg-gray-200 rounded-lg shadow-md">
+            <img class="pt-4 mx-auto" src="images/tea-1.png" alt="Tea  1" />
+            <div class="p-4 mx-auto">
+              <h2 class="text-xl font-bold">Milk Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="overflow-hidden bg-gray-200 rounded-lg shadow-md">
+            <img class="pt-4 mx-auto" src="images/tea-2.png" alt="Tea  1" />
+            <div class="p-4 mx-auto">
+              <h2 class="text-xl font-bold">Black Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="overflow-hidden bg-gray-200 rounded-lg shadow-md">
+            <img class="pt-4 mx-auto" src="images/tea-3.png" alt="Tea  1" />
+            <div class="p-4 mx-auto">
+              <h2 class="text-xl font-bold">Lemon Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="overflow-hidden bg-gray-200 rounded-lg shadow-md">
+            <img class="pt-4 mx-auto" src="images/tea-4.png" alt="Tea  1" />
+            <div class="p-4 mx-auto">
+              <h2 class="text-xl font-bold">Green Tea</h2>
+              <p class="text-gray-600">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
