Add Card 2nd section with review

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
           </p>
         </div>
         <!-- grid Card -->
-        <div class="grid grid-cols-1 gap-6 text-center md:grid-cols-2 lg:grid-cols-4">
+        <div
+          class="grid grid-cols-1 gap-6 text-center md:grid-cols-2 lg:grid-cols-4"
+        >
           <!-- Card -->
           <div class="overflow-hidden bg-gray-200 rounded-lg shadow-md">
             <img class="pt-4 mx-auto" src="images/tea-1.png" alt="Tea  1" />
@@ -129,33 +131,65 @@
         </div>
       </section>
       <!-- Great Tea Section -->
-       <section class="mb-24">
+      <section class="mb-24">
         <div class="grid grid-cols-1 lg:grid-cols-2">
           <!-- Image Section -->
-           <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
-            <div class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl">
-
-            </div>
+          <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+            <div
+              class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"
+            ></div>
             <div class="row-span-2 bg-orange-50 rounded-xl">
-              <img class="mx-auto" src="./images/fresh-1.png" alt="">
+              <img class="mx-auto" src="./images/fresh-1.png" alt="" />
             </div>
             <div class="row-span-2 bg-stone-200 rounded-xl">
-              <img class="mx-auto" src="./images/fresh-2.png" alt="">
+              <img class="mx-auto" src="./images/fresh-2.png" alt="" />
             </div>
-            <div class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl">
-            </div>
-           </div>
-           <!-- Text Section -->
-           <div>
-            <h1 class="mb-5 text-5xl font-bold">Great Tea, Freshly<br>Presented</h1>
-            <p class="mb-2 text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <div
+              class="h-38 bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"
+            ></div>
+          </div>
+          <!-- Text Section -->
+          <div>
+            <h1 class="mb-5 text-5xl font-bold">
+              Great Tea, Freshly<br />Presented
+            </h1>
+            <p class="mb-2 text-gray-500">
+              The meaning of gong cha is chanese is to provide the best tea to
+              emperor from all possessions . It represents the highest quality
+              and self expectation. Establishing in 2006, Gong cha had been
+              deeply appreciated by its custoers because of good words of mouth
+              and unique customized service orginated from Taiwan.
+            </p>
             <h1 class="mb-5 text-2xl font-bold">Unique Taste</h1>
-            <p class="mb-2 text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <p class="mb-2 text-gray-500">
+              A Unique and different style from other teapots gives a luxurious
+              and minimalist impression
+            </p>
             <h1 class="mb-5 text-2xl font-bold">Premium Quality</h1>
-            <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
-           </div>
+            <p class="text-gray-500">
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
         </div>
-       </section>
+      </section>
+      <!-- Review section -->
+      <section class="mb-24">
+        <div
+          class="grid grid-cols-1 text-white h-38 bg-gradient-to-r from-orange-500 to-red-500 rounded-xl lg:grid-cols-2 px-7 md:px-16"
+        >
+          <!-- Text Section -->
+          <div class="w-5/6">
+            <h1 class="mt-10 mb-5 text-5xl font-bold">Meet Our Super<br>Clients</h1>
+            <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="px-5 py-2 font-bold text-orange-600 bg-white rounded-lg">Show All</button>
+          </div>
+          <!-- Card Section -->
+          <div class="relative py-24">
+            <!-- Top Card -->
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
